--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,16 @@ img {
 .accent {
   color: #2e2f42;
 }
+
+.page-link-nav-hover:hover::after {
+  content: "";
+  display: block;
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+  background: #404bbf;
+}
+
 .page-link-nav {
   font-weight: 500;
   font-size: 16px;
@@ -119,6 +129,16 @@ img {
 
 .page-present {
   background: #2e2f42;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/hero-image.jpg);
+  background-repeat: no-repeat;
 }
 .container-page-present {
   padding: 188px 0 188px 0;
@@ -180,6 +200,18 @@ img {
 .benefits-item {
   width: calc((100% - 72px) / 4);
 }
+
+.icon-benefits-contener {
+  display: flex;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background: #f4f4fd;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+}
+
 .page-benefis-list {
   display: flex;
   justify-content: space-evenly;
@@ -220,9 +252,41 @@ img {
 .page-team-item {
   background: #fff;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .info-team {
   padding: 32px 0;
+}
+.icon-team-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.icon-team-item {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-team-link {
+  display: flex;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-team-link:hover,
+.icon-team-link:focus {
+  background-color: #404bbf;
+}
+
+.icon-team {
+  fill: #f4f4fd;
 }
 
 /* styles section four */
@@ -240,17 +304,47 @@ img {
 .item-portfolio {
   width: calc((100% - 48px) / 3);
   border: 1px solid #e7e9fc;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.item-portfolio:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
 .info-portfolio {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+.overlay-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: #4d5ae5;
+  padding: 40px 32px;
+  color: #f4f4fd;
+  transform: translateY(100%) 250ms;
+}
+.overlay-container:hover .overlay {
+  transform: translateY(0%);
 }
 
 /* ====page-footer styles==== */
 .page-footer {
   background: #2e2f42;
   padding: 100px 0;
+}
+.container-footer {
+  display: flex;
 }
 .logo-footer {
   display: inline-block;
@@ -265,4 +359,50 @@ img {
 }
 .accent-footer {
   color: #f4f4fd;
+}
+.icon-footer-container {
+  display: block;
+  margin-left: 120px;
+  align-items: center center;
+}
+.text-footer-icon {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  align-items: center center;
+}
+
+.icon-footer-list {
+  display: flex;
+  padding-top: 8px;
+  justify-content: center;
+  gap: 24px;
+}
+.icon-footer-item {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-footer-link {
+  display: flex;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-footer-link:hover,
+.icon-footer-link:focus {
+  background-color: #31d0aa;
+}
+
+.icon-footer {
+  fill: #f4f4fd;
 }
