--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,8 @@ img {
 .page-header {
   background-color: #fff;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container-header {
   display: flex;
@@ -88,13 +90,16 @@ img {
   color: #2e2f42;
 }
 
-.page-link-nav-hover:hover::after {
+.page-link-nav-hover::after {
   content: "";
+  left: 0;
   display: block;
   border-radius: 2px;
-  width: 48px;
+  width: 100%;
   height: 4px;
   background: #404bbf;
+  position: absolute;
+  bottom: -1px;
 }
 
 .page-link-nav {
@@ -108,6 +113,12 @@ img {
 .page-link-nav:hover,
 .page-link-nav:focus {
   color: #404bbf;
+  position: relative;
+}
+
+.page-link-nav-hover {
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-contact {
@@ -118,6 +129,7 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-link-contact:hover,
@@ -345,10 +357,12 @@ img {
 }
 .container-footer {
   display: flex;
+  align-items: baseline;
 }
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
+  margin-right: 120px;
 }
 .text-footer {
   line-height: 1.5;
@@ -373,13 +387,14 @@ img {
   letter-spacing: 0.02em;
   color: #fff;
   align-items: center center;
+  margin-bottom: 16px;
 }
 
 .icon-footer-list {
   display: flex;
   padding-top: 8px;
   justify-content: center;
-  gap: 24px;
+  gap: 16px;
 }
 .icon-footer-item {
   width: 40px;
