--- a/css/styles.css
+++ b/css/styles.css
@@ -113,10 +113,10 @@ img {
 .page-link-nav:hover,
 .page-link-nav:focus {
   color: #404bbf;
-  position: relative;
 }
 
 .page-link-nav-hover {
+  position: relative;
   color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -153,6 +153,7 @@ img {
   background-repeat: no-repeat;
 }
 .container-page-present {
+  max-width: 1440px;
   padding: 188px 0 188px 0;
 }
 .page-title-present {
@@ -183,6 +184,7 @@ img {
   border-radius: 4px;
   padding: 16px 32px;
   height: 56px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-btn:hover,
@@ -359,10 +361,12 @@ img {
   display: flex;
   align-items: baseline;
 }
+.container-logo-footer {
+  margin-right: 120px;
+}
 .logo-footer {
   display: inline-block;
   margin-bottom: 16px;
-  margin-right: 120px;
 }
 .text-footer {
   line-height: 1.5;
@@ -413,7 +417,9 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-footer-link:hover,
+.icon-footer-link:hover {
+  background-color: #31d0aa;
+}
 .icon-footer-link:focus {
   background-color: #31d0aa;
 }
