--- a/css/styles.css
+++ b/css/styles.css
@@ -124,12 +124,13 @@ img {
 .page-contact {
   font-style: normal;
 }
+
 .page-link-contact {
   color: #434455;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-link-contact:hover,
@@ -339,16 +340,16 @@ img {
 .overlay {
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background: #4d5ae5;
   padding: 40px 32px;
   color: #f4f4fd;
-  transform: translateY(100%) 250ms;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.overlay-container:hover .overlay {
+
+.item-portfolio:hover .overlay {
   transform: translateY(0%);
 }
 
@@ -417,9 +418,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-footer-link:hover {
-  background-color: #31d0aa;
-}
+.icon-footer-link:hover,
 .icon-footer-link:focus {
   background-color: #31d0aa;
 }
