--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,8 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   background: #4d5ae5;
   padding: 40px 32px;
   color: #f4f4fd;
